# LP_restart

./: .gitignore  README.md  data_list.txt  log.md
implementation_cpp/: ADMM.cpp  CMakeLists.txt  EGM.cpp  PDHG.cpp  config.h.in  implement_cpp.sln  implement_cpp.vcxproj  implement_cpp.vcxproj.filters  main.cpp  plot.ipynb  presolve.cc  presolve.h  presolve_test.cc  run.sh  run1data.sh  runADMM.sh  shared_functions.cpp  shared_functions.h
implementation_cpp/cache/ADMM/nug08-3rd/: fixed_restarts_1024.txt  fixed_restarts_16.txt  fixed_restarts_256.txt  fixed_restarts_4096.txt  fixed_restarts_64.txt
implementation_cpp/cache/ADMM/nug20/: fixed_restarts_16384.txt  fixed_restarts_4096.txt  fixed_restarts_65536.txt
implementation_cpp/cache/ADMM/qap10/: fixed_restarts_1024.txt  fixed_restarts_16384.txt  fixed_restarts_4096.txt  no_restarts.txt
implementation_cpp/cache/PDHG/: nug08-3rd_fixed_restarts_1024.txt
implementation_cpp/data/: graph.txt
implementation_cpp/jupyternb/: generate_graph.ipynb  pgrk.py  pgrk_mat.py  solveByGurobi.py
implementation_cpp/output/: ADMM_0_0_-1.txt  ADMM_0_1_1024.txt  ADMM_0_1_16384.txt  ADMM_0_1_4096.txt  ADMM_1_1_1024.txt  ADMM_1_1_16384.txt  ADMM_1_1_4096.txt  ADMM_2_1_16.txt  ADMM_2_1_256.txt  ADMM_2_1_64.txt  PDHG_0_1_-1.txt  PDHG_0_1_-1_test_compute_gap.txt  gurobi_obj_residual.txt  plot.ipynb  trust_obj_residual.txt  xyr.txt
implementation_cpp/output/n15-3/: r1_pwu1_s1_t-8.txt
implementation_cpp/output/neos-506428/: r1_pwu1_s1_t-8.txt
implementation_cpp/output/neos-932816/: r1_pwu1_s1_t-8.txt
implementation_cpp/output/ns2118727/: r1_pwu1_s1_t-8.txt
implementation_cpp/output/physiciansched6-2/: r1_pwu1_s1_t-8.txt
implementation_cpp/utils/: process_txt_mat  process_txt_mat.h  wreigenmatrix.h
(+51 files in other folders)
